@@ -16,8 +16,10 @@ apport (0.17) UNRELEASED; urgency=low
   * po/de.po: Add new translations to make this complete again.
   * problem_report.py, apport_utils.py: Prepend UnitTest classes with '_' so
     that they do not appear in the help() output.
+  * apport_utils.py: Add make_report_path(), which constructs the canonical
+    crash report pathname for a given report.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Aug 2006 17:46:46 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Aug 2006 18:06:45 +0200
 
 apport (0.16) edgy; urgency=low
 
